fixed css issues josh was having
buy tickets page now works and is linked on all pages.

--- a/Artists.html
+++ b/Artists.html
@@ -21,7 +21,7 @@
       </nav>
       
       <div id="second_nav">
-          <div id="BUY_TICKETS">Buy Tickets</div>
+          <div id="BUY_TICKETS"><a href="Buy_Tickets.html">Buy Tickets</a></div>
           <div id="PLAY_FOR_US">Play For Us</div>
           <div id="BECOME_A_MEMBER"><a href="Become_a_member.html">Become a Member</a></div>
           <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
@@ -69,7 +69,8 @@
 <div id="links1_artists"><a href="index.html">Home</a><br> 
   <a href="Events.html">Events</a><br>
   <a href="Artists.html">Artists</a><br>
-  <a href="About.html">About</a></div> <div id="links2_artists"> Play For Us<br>Buy Tickets<br>Become a Volunteer<br>
+  <a href="About.html">About</a></div> <div id="links2_artists"> Play For Us<br>
+    <a href="Buy_Tickets.html">Buy Tickets</a><br>Become a Volunteer<br>
     <a href="Become_a_member.html">Become a Member</a></div>
 </div>
 <div id="sponsors_artists"> <strong><h2> Sponsors</h2> </strong> 
