--- a/Become_a_member.html
+++ b/Become_a_member.html
@@ -21,9 +21,9 @@
       </nav>
       
       <div id="second_nav">
-          <div id="BUY_TICKETS">Buy Tickets</div>
+          <div id="BUY_TICKETS"><a href="Buy_Tickets.html">Buy Tickets</a></div>
           <div id="PLAY_FOR_US">Play For Us</div>
-          <div id="BECOME_A_MEMBER" class="thispage"><a href="Become a Member/Become_a_member.html">Become a Member</a></div>
+          <div id="BECOME_A_MEMBER" class="thispage"><a href="Become_a_member.html">Become a Member</a></div>
           <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
       </div>
       
@@ -59,11 +59,11 @@ Individual Membership subscription is <b>$25</b> per year.
   <option value="saab">Recurring</option>
 </select>
 <br>
-<img src="visa.png" alt="visa" width=auto height=50> <img src="mastercard.png" alt="mastercard" width=auto height=50> <br>
+<img src="pictures/visa.png" alt="visa" width=auto height=50> <img src="pictures/mastercard.png" alt="mastercard" width=auto height=50> <br>
 Credit card: <input type="text" name="paddress"><br>
 Security code: <input type="text" name="paddress"><br><br>
 OR
-<img src="paypal.png" alt="paypal" width=auto height=50>
+<img src="pictures/paypal.png" alt="paypal" width=auto height=50>
 Pay with PayPal<br>
 <br>
 <input type="submit" value="Submit">
@@ -85,7 +85,8 @@ The Music Centre is also registered as a Deductible Gift Recipient. Any extra do
 
 <div id="links1"><a href="index.html">Home</a><br> <a href="Events.html" class="nav-link">Events</a><br><a href="Artists.html" class="nav-link">Artists</a><br>
   <a href="About.html" class="nav-link">About</a></div> 
-<div id="links2">Play For Us<br>Buy Tickets<br>Become a Volunteer<br>
+<div id="links2">Play For Us<br>
+  <a href="Buy_Tickets.html">Buy Tickets</a><br>Become a Volunteer<br>
   <a href="Become_a_member.html">Become a Member</a></div>
 </div>
 <div id="sponsors"> <strong><h2> Sponsors</h2> </strong> 
