--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </nav>
       
       <div id="second_nav">
-          <div id="BUY_TICKETS">Buy Tickets</div>
+          <div id="BUY_TICKETS"><a href="Buy_Tickets.html">Buy Tickets</a></div>
           <div id="PLAY_FOR_US">Play For Us</div>
           <div id="BECOME_A_MEMBER"><a href="Become_a_member.html">Become a Member</a></div>
           <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
@@ -57,15 +57,15 @@
 
 <div id="event1"> <img src="pictures/Layer 3.jpg" width="200" height="200" alt=""/> </div>
 <div id="event1_text"> <strong>AVIVA AND FRIENDS</strong> <br>2pm Sunday 14 May<br>at C2 (Townsville Civic Centre)</div>
-<div id="BUY_TICKETS_BOTTOM_1"><strong>Buy Tickets</strong></div>
+<div id="BUY_TICKETS_BOTTOM_1"><strong><a href="Buy_Tickets.html">Buy Tickets</a></strong></div>
 
 <div id="event2"> <img src="pictures/Harbourside300.jpg" width="200" height="200" alt=""/> </div>
 <div id="event2_text"> <strong>Dream Serenade</strong> <br>2pm Sunday 17 May<br>at C2 (Townsville Civic Centre)</div>
-<div id="BUY_TICKETS_BOTTOM_2"><strong>Buy Tickets</strong></div>
+<div id="BUY_TICKETS_BOTTOM_2"><strong><a href="Buy_Tickets.html">Buy Tickets</a></strong></div>
 
 <div id="event3"> <img src="pictures/Home Event SMALL1.jpg" width="200" height="200" alt=""/> </div>
 <div id="event3_text"> <strong>Townsville Concert Band</strong> <br>2pm Sunday 28 May<br>at C2 (Townsville Civic Centre)</div>
-<div id="BUY_TICKETS_BOTTOM_3"><strong>Buy Tickets</strong></div>
+<div id="BUY_TICKETS_BOTTOM_3"><strong><a href="Buy_Tickets.html">Buy Tickets</a></strong></div>
 
  </div>
  </body3>
@@ -76,7 +76,8 @@
 
 <div id="links1"><a href="index.html">Home</a><br> <a href="Events.html" class="nav-link">Events</a><br><a href="Artists.html" class="nav-link">Artists</a><br>
   <a href="About.html" class="nav-link">About</a></div> 
-<div id="links2">Play For Us<br>Buy Tickets<br>Become a Volunteer<br>
+<div id="links2">Play For Us<br>
+  <a href="Buy_Tickets.html">Buy Tickets</a><br>Become a Volunteer<br>
   <a href="Become_a_member.html">Become a Member</a></div>
 </div>
 <div id="sponsors"> <strong><h2> Sponsors</h2> </strong> 
