added bulletin_board.html and sign_in.html

--- a/About.html
+++ b/About.html
@@ -11,11 +11,13 @@
   <header id="top">
     <a href="index.html"><img src="pictures/logowhite.png" width="200" height="123" alt=""/></a>
       <nav id="mainnav">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="Events.html">Events</a></li>
-          <li><a href="Artists.html">Artists</a></li>
-          <li><a href="About.html" class="thispage">About</a></li>
+               <ul>
+        	<li><a href="Bulletin_board.html">Bulletin Board</a></li>
+          	<li><a href="index.html">Home</a></li>
+          	<li><a href="Events.html">Events</a></li>
+          	<li><a href="Artists.html">Artists</a></li>
+          	<li><a href="About.html" class="thispage">About</a></li>
+            <li><a href="Member_sign_in.html">Sign in</a></li>
         </ul>
       </nav>
       
