--- a/Member_sign_in.html
+++ b/Member_sign_in.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>TCMC - Buy Tickets</title>
+<title>TCMC - Sign In</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -17,12 +17,12 @@
           	<li><a href="Events.html">Events</a></li>
           	<li><a href="Artists.html">Artists</a></li>
           	<li><a href="About.html">About</a></li>
-            <li><a href="Member_sign_in.html">Sign in</a></li>
+            <li><a href="Member_sign_in.html" class="thispage">Sign in</a></li>
         </ul>
       </nav>
       
       <div id="second_nav">
-          <div id="BUY_TICKETS" class="thispage"><a href="Buy_Tickets.html">Buy Tickets</a></div>
+          <div id="BUY_TICKETS"><a href="Buy_Tickets.html">Buy Tickets</a></div>
           <div id="PLAY_FOR_US">Play For Us</div>
           <div id="BECOME_A_MEMBER"><a href="Become_a_member.html">Become a Member</a></div>
           <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
