--- a/Become_a_member.html
+++ b/Become_a_member.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 
-<title>TCMC - Townsville Community Music Centre</title>
+<title>TCMC - Become a Member</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -13,10 +13,12 @@
     <a href="index.html"><img src="pictures/logowhite.png" width="200" height="123" alt=""/></a>
       <nav id="mainnav">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="Events.html">Events</a></li>
-          <li><a href="Artists.html">Artists</a></li>
-          <li><a href="About.html">About</a></li>
+        	<li><a href="Bulletin_board.html">Bulletin Board</a></li>
+          	<li><a href="index.html">Home</a></li>
+          	<li><a href="Events.html">Events</a></li>
+          	<li><a href="Artists.html">Artists</a></li>
+          	<li><a href="About.html">About</a></li>
+            <li><a href="Member_sign_in.html">Sign in</a></li>
         </ul>
       </nav>
       
