--- a/Bulletin_board.html
+++ b/Bulletin_board.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 
-<title>TCMC - Artists</title>
+<title>TCMC - Bulletin Board</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -12,11 +12,11 @@
     <header id="top">
     <a href="index.html"><img src="pictures/logowhite.png" width="200" height="123" alt=""/></a>
       <nav id="mainnav">
-                <ul>
-        	<li><a href="Bulletin_board.html">Bulletin Board</a></li>
+        <ul>
+        	<li><a href="Bulletin_board.html" class="thispage">Bulletin Board</a></li>
           	<li><a href="index.html">Home</a></li>
           	<li><a href="Events.html">Events</a></li>
-          	<li><a href="Artists.html" class="thispage">Artists</a></li>
+          	<li><a href="Artists.html">Artists</a></li>
           	<li><a href="About.html">About</a></li>
             <li><a href="Member_sign_in.html">Sign in</a></li>
         </ul>
