--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <a href="index.html"><img src="pictures/logowhite.png" width="200" height="123" alt=""/></a>
       <nav id="mainnav">
         <ul>
-          <li><a href="index.html" class="thispage">Home</a></li>
-          <li><a href="Events.html">Events</a></li>
-          <li><a href="Artists.html">Artists</a></li>
-          <li><a href="About.html">About</a></li>
+        	<li><a href="Bulletin_board.html">Bulletin Board</a></li>
+          	<li><a href="index.html" class="thispage">Home</a></li>
+          	<li><a href="Events.html">Events</a></li>
+          	<li><a href="Artists.html">Artists</a></li>
+          	<li><a href="About.html">About</a></li>
+            <li><a href="Member_sign_in.html">Sign in</a></li>
         </ul>
       </nav>
       
