sign in and bulletin board done.

--- a/Become_a_member.html
+++ b/Become_a_member.html
@@ -32,7 +32,7 @@
     
 	</header>
   </div>
- <div id="welcome_img_become_a_member"><img src="pictures/BlackBox.jpg" width="1691" height="1550" alt=""/></div>
+ <div id="welcome_img_become_a_member"><img src="pictures/BlackBox.jpg" width="1691" height="1440" alt=""/></div>
  <body1 id="body1_become_a_member"> 
 <div id="become_a_member_body1">   
   
@@ -40,20 +40,26 @@
 <div id="become_a_member_body1_text1">
 
 
-All members receive up to a <strong>50% discount on all tickets</strong>. By becoming a member you become a part of the<br> Townsville Community Music Centre. You are also supporting local musicians and keeping music <strong><i>alive</i></strong> in Townsville. 
+All members receive up to a <strong>50% discount on all tickets</strong>. By becoming a member you become a part of the Townsville Community Music Centre. <br>You are also supporting local musicians and keeping music <strong><i>alive</i></strong> in Townsville. 
 
 <form>
 <h3>Contact Details</h3>
 First name: <input type="text" name="fname"><br>
 Last name: <input type="text" name="lname"><br>
-Email: <input type="text" name="email"> (We won't send you any spam!)<br> 
+Email: <input type="text" name="email"> (This will also be your username when signing in)<br> 
+Password: <input type="text" name="password"> (This will be your password when signing in)
 <h4>Optional</h4>
 Mobile Phone: <input type="text" name="mphone"><br>
 Postal Address: <input type="text" name="paddress"><br>
 Home Phone: <input type="text" name="hphone"><br>
 Anything else (comments, suggestions, anything): <br><textarea rows="4" cols="50">
 </textarea><br>
-<h3>Payment</h3>
+Type of Membership: <select>
+  <option value="free_member">Free Member</option>
+  <option value="paid_member">Paid Member</option>
+</select>
+<h3>Payment</h3>(only applicable if paid membership was selected)<br><br>
+
 Individual Membership subscription is <b>$25</b> per year.
 <br>
 <select>
