--- a/Events.html
+++ b/Events.html
@@ -30,8 +30,8 @@
   </header>  
 </div>
 
- <div id="artists_background0"><img src="pictures/BlackBox.jpg" width="1692" height="900" alt=""/></div>
- <div id="artists_background1"><img src="pictures/large_white_box_grayborder.jpg" width="1625" height="400" alt=""/></div>
+ <div id="events_background0"><img src="pictures/BlackBox.jpg" width="1692" height="900" alt=""/></div>
+ <div id="events_background1"><img src="pictures/large_white_box_grayborder.jpg" width="1625" height="400" alt=""/></div>
 
 <body1 id="body1_events">
 <div id="events_events1"> <img src="pictures/Harbourside300.jpg" width="350" height="350" alt="aviva_quartet_group_photo.jpg"/> </div>
@@ -45,7 +45,7 @@
 </div>
 </body1> 
 
- <div id="artists_background3"><img src="pictures/large_white_box_grayborder.jpg" width="1625" height="400" alt=""/></div>
+ <div id="events_background3"><img src="pictures/large_white_box_grayborder.jpg" width="1625" height="400" alt=""/></div>
  
 <body2 id="body2_events">
 <div id="events_events2"> <img src="pictures/Oompahlogo600.png" width="350" height="350" alt="aquapella_group_photo.jpg"/> </div>
