--- a/Member_sign_in.html
+++ b/Member_sign_in.html
@@ -31,38 +31,22 @@
   </header>
   </div>
     
- <div id="welcome_img_become_a_member"><img src="pictures/BlackBox.jpg" width="1691" height="800" alt=""/></div>
- <body1 id="body1_buy_tickets"> 
-<div id="buy_tickets_body1">   
+ <div id="welcome_img_sign_in"><img src="pictures/BlackBox.jpg" width="1691" height="600" alt=""/></div>
+ <body1 id="body1_sign_in"> 
+<div id="sign_in_body1">   
   
   
-<div id="buy_tickets_body1_text1"> 
+<div id="sign_in_body1_text1"> 
 
 <form>
 
-  <label for="buy_tickets"><h1>Buy Tickets</h1></label>
-  <label for="amount"><br>Number of Tickets:</label> <input type="text" class="amount"></input>
-  <label for="event"> <br>Choose Event:</label> 
-  <select id = "event">
-               <option value = "Harbourside Duo">Harbourside Duo</option>
-               <option value = "Die Frankfurter Oompah Band">Die Frankfurter Oompah Band</option>
-               <option value = "AVIVA and Friends Go Abroad! ">AVIVA and Friends Go Abroad!</option>
-               <option value = "SUNDAY VARIETY CONCERT ">SUNDAY VARIETY CONCERT</option>
-               <option value = "Townsville Concert Band  ">Townsville Concert Band </option>
-               <option value = "Voices of Pimlico ">Voices of Pimlico</option>
-               <option value = "SUNDAY VARIETY CONCERT ">Allegro Choir </option>
-             </select>
+  <label for="sign_in"><h1>Sign In</h1></label>
+  <label for="Username"><br>Username:</label> <input type="text" class="username"></input>(The email you signed up with)
+  <label for="Password"> <br>Password:</label><input type="text" class="password"></input> (The password you signed up with)
+<br>
+
  
- 
-<label for="payment_method"><br>Payment Method:</label>
- <select id = "payment" onChange="window.location.href=this.value" >
-               <option value = "">mastercard</option>
-               <option value = "">visa</option>
-               <option value = "https://www.paypal.com/signin/?country.x=AU&locale.x=en_AU ">paypal</option>
-             </select>
- 
- <button  class="submit" >Submit</button> 
- <button type="reset" class="reset"> reset </button>
+ <button  class="sign_in" >Sign In</button> 
  
 </form>
 </div>
