--- a/Buy_Tickets.html
+++ b/Buy_Tickets.html
@@ -75,7 +75,8 @@
 
 <div id="links1"><a href="index.html">Home</a><br> <a href="Events.html" class="nav-link">Events</a><br><a href="Artists.html" class="nav-link">Artists</a><br>
   <a href="About.html" class="nav-link">About</a></div> 
-<div id="links2">Play For Us<br>Buy Tickets<br>Become a Volunteer<br>
+<div id="links2">Play For Us<br>
+  <a href="Buy_Tickets.html">Buy Tickets</a><br>Become a Volunteer<br>
   <a href="Become_a_member.html">Become a Member</a></div>
 </div>
 <div id="sponsors"> <strong><h2> Sponsors</h2> </strong> 
