added josh's play for us.html and volunteer.html

--- a/About.html
+++ b/About.html
@@ -23,9 +23,9 @@
       
       <div id="second_nav">
           <div id="BUY_TICKETS"><a href="Buy_Tickets.html">Buy Tickets</a></div>
-          <div id="PLAY_FOR_US">Play For Us</div>
+          <div id="PLAY_FOR_US"><a href="Play_for_us.html">Play For Us</a></div>
           <div id="BECOME_A_MEMBER"><a href="Become_a_member.html">Become a Member</a></div>
-          <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
+          <div id="BECOME_A_VOLUNTEER"><a href="Become_a_volunteer.html">Become a Volunteer</a></div>
       </div>
       
   </header>  
@@ -53,8 +53,9 @@ Also discovered in the old collection were some pieces relevant to North Queensl
 
 <div id="links1_about"><a href="index.html">Home</a><br> <a href="Events.html" class="nav-link">Events</a><br><a href="Artists.html" class="nav-link">Artists</a><br>
   <a href="About.html" class="nav-link">About</a></div> 
-<div id="links2_about"> Play For Us<br>
-  <a href="Buy_Tickets.html">Buy Tickets</a><br>Become a Volunteer<br>
+<div id="links2_about"><a href="Play_for_us.html"> Play For Us</a><br>
+  <a href="Buy_Tickets.html">Buy Tickets</a><br>
+  <a href="Become_a_volunteer.html">Become a Volunteer</a><br>
   <a href="Become_a_member.html">Become a Member</a></div>
 </div>
 <div id="sponsors_about"> <strong><h2> Sponsors</h2> </strong> 
