trying to get database stuff to work
isnt finished

--- a/About.html
+++ b/About.html
@@ -42,8 +42,7 @@ The National Library of Australia has an online catalogue (TROVE) that lists not
 Also discovered in the old collection were some pieces relevant to North Queensland. Local musicians performed these at a musical social afternoon on Sunday April 21st in C2 at the Civic Theatre. The remaining sheet music, books and CDs were put on display and distributed free of charge to the local music community. </p>
 </body1>
 
-
-<div class="image5"><img src="pictures/timeline.jpg" alt="" width="64" height="64" class="image5"/> </div>
+<div class="image5"><img src="pictures/timelineredone.png" alt="" width="64" height="64" class="image5"/> </div>
 
 <footer id="footer2">
 <div id="contact_about"><strong><h2 class="footer2_contact">Contact</h2></strong>  Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810 
