--- a/Buy_Tickets.html
+++ b/Buy_Tickets.html
@@ -39,7 +39,6 @@
 <form>
 
   <label for="buy_tickets"><h1>Buy Tickets</h1></label>
-  <label for="amount"><br>Number of Tickets:</label> <input type="text" class="amount"></input>
   <label for="event"> <br>Choose Event:</label> 
   <select id = "event">
                <option value = "Harbourside Duo">Harbourside Duo</option>
@@ -51,16 +50,18 @@
                <option value = "SUNDAY VARIETY CONCERT ">Allegro Choir </option>
              </select>
  
- 
+
+ <label for="amount"><br>Number of Tickets:</label> <input type="number" class="amount"></input>
+
 <label for="payment_method"><br>Payment Method:</label>
  <select id = "payment" onChange="window.location.href=this.value" >
-               <option value = "">mastercard</option>
-               <option value = "">visa</option>
-               <option value = "https://www.paypal.com/signin/?country.x=AU&locale.x=en_AU ">paypal</option>
+               <option value = "">MasterCard</option>
+               <option value = "">Visa</option>
+               <option value = "https://www.paypal.com/signin/?country.x=AU&locale.x=en_AU ">PayPal</option>
              </select>
  
  <button  class="submit" >Submit</button> 
- <button type="reset" class="reset"> reset </button>
+ <button type="reset" class="reset"> Reset </button>
  
 </form>
 </div>
