made it so the footer and header is included with php

--- a/feeder.html
+++ b/feeder.html
@@ -37,5 +37,8 @@
 <li><a href="http://hiphopproduction.com/production/8-tips-for-getting-your-music-heard-for-free/">Getting your music heard for free</a></li>
 </ul>
 
+<?php include("footer.php");
+?>
+
 </body>
 </html>
