fixed artist database

--- a/About.html
+++ b/About.html
@@ -22,10 +22,10 @@
       </nav>
       
       <div id="second_nav">
-          <div id="BUY_TICKETS"><a href="Buy_Tickets.html">Buy Tickets</a></div>
-          <div id="PLAY_FOR_US"><a href="Play_for_us.html">Play For Us</a></div>
-          <div id="BECOME_A_MEMBER"><a href="Become_a_member.html">Become a Member</a></div>
-          <div id="BECOME_A_VOLUNTEER"><a href="Become_a_volunteer.html">Become a Volunteer</a></div>
+          <a href="Buy_Tickets.html"><div id="BUY_TICKETS">Buy Tickets</div></a>
+          <a href="Playforus.html"><div id="PLAY_FOR_US">Play For Us</div></a>
+          <a href="Become_a_member.html"><div id="BECOME_A_MEMBER">Become a Member</div></a>
+          <a href="Become_a_volunteer.html"><div id="BECOME_A_VOLUNTEER">Become a Volunteer</div></a>
       </div>
       
   </header>  
