--- a/Buy_Tickets.html
+++ b/Buy_Tickets.html
@@ -21,11 +21,11 @@
         </ul>
       </nav>
       
-      <div id="second_nav">
-          <div id="BUY_TICKETS" class="thispage"><a href="Buy_Tickets.html">Buy Tickets</a></div>
-          <div id="PLAY_FOR_US">Play For Us</div>
-          <div id="BECOME_A_MEMBER"><a href="Become_a_member.html">Become a Member</a></div>
-          <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
+       <div id="second_nav">
+          <a href="Buy_Tickets.html"><div id="BUY_TICKETS">Buy Tickets</div></a>
+          <a href="Playforus.html"><div id="PLAY_FOR_US">Play For Us</div></a>
+          <a href="Become_a_member.html"><div id="BECOME_A_MEMBER">Become a Member</div></a>
+          <a href="Become_a_volunteer.html"><div id="BECOME_A_VOLUNTEER">Become a Volunteer</div></a>
       </div>
       
   </header>
