think it's fine now..
the php all links to each other (hopefully). there are some issues and
stuff obviously.

--- a/Become_a_volunteer.html
+++ b/Become_a_volunteer.html
@@ -23,7 +23,7 @@
       
       <div id="second_nav">
           <a href="Buy_Tickets.html"><div id="BUY_TICKETS">Buy Tickets</div></a>
-          <a href="Playforus.html"><div id="PLAY_FOR_US">Play For Us</div></a>
+          <a href="Play_for_us.php"><div id="PLAY_FOR_US">Play For Us</div></a>
           <a href="Become_a_member.html"><div id="BECOME_A_MEMBER">Become a Member</div></a>
           <a href="Become_a_volunteer.html"><div id="BECOME_A_VOLUNTEER">Become a Volunteer</div></a>
       </div>
