--- a/Play_for_us.html
+++ b/Play_for_us.html
@@ -24,7 +24,7 @@
       
       <div id="second_nav">
           <a href="Buy_Tickets.html"><div id="BUY_TICKETS">Buy Tickets</div></a>
-          <a href="Playforus.html"><div id="PLAY_FOR_US">Play For Us</div></a>
+          <a href="Play_for_us.html"><div id="PLAY_FOR_US" class="thispage">Play For Us</div></a>
           <a href="Become_a_member.html"><div id="BECOME_A_MEMBER">Become a Member</div></a>
           <a href="Become_a_volunteer.html"><div id="BECOME_A_VOLUNTEER">Become a Volunteer</div></a>
       </div>
@@ -33,11 +33,11 @@
   </div>
     
  <div id="welcome_img_volunteer"><img src="pictures/BlackBox.jpg" width="1691" height="700" alt=""/></div>
- <body1 id="volunteer_tickets"> 
-<div id="volunteer_body1">   
+ <body1 id="play_for_us_main"> 
+<div id="play_for_us_body1">   
   
   
-<div id="volunteer_body1_text1"> 
+<div id="play_for_us_body1_text1"> 
 
   
 <form>
