--- a/html/About.html
+++ b/html/About.html
@@ -8,32 +8,32 @@
 <body>
 <div id="wrapper">
   <div id="content">
-  <header id="top">
-    <a href="index.html"><img src="pictures/logowhite.png" width="200" height="123" alt=""/></a>
+ <header id="top">
+    <a href="index.php"><img src="pictures/logowhite.png" width="200" height="123" alt=""/></a>
       <nav id="mainnav">
-               <ul>
-        	<li><a href="Bulletin_board.html">Bulletin Board</a></li>
-          	<li><a href="index.html">Home</a></li>
-          	<li><a href="Events.html">Events</a></li>
-          	<li><a href="Artists.html">Artists</a></li>
-          	<li><a href="About.html" class="thispage">About</a></li>
-            <li><a href="Member_sign_in.html">Sign in</a></li>
+                <ul>
+        	<li><a href="Bulletin_board.php">Bulletin Board</a></li>
+          	<li><a href="index.php">Home</a></li>
+          	<li><a href="Events.php">Events</a></li>
+          	<li><a href="Artists.php">Artists</a></li>
+          	<li><a href="about.php" class="thispage">About</a></li>
+            <li><a href="Member_sign_in.php">Sign in</a></li>
         </ul>
       </nav>
       
       <div id="second_nav">
-          <a href="Buy_Tickets.html"><div id="BUY_TICKETS">Buy Tickets</div></a>
-          <a href="Playforus.html"><div id="PLAY_FOR_US">Play For Us</div></a>
-          <a href="Become_a_member.html"><div id="BECOME_A_MEMBER">Become a Member</div></a>
-          <a href="Become_a_volunteer.html"><div id="BECOME_A_VOLUNTEER">Become a Volunteer</div></a>
-      </div>
-      
-  </header>  
+          <div id="BUY_TICKETS"><a href="Buy_Tickets.php">Buy Tickets</a></div>
+          <div id="PLAY_FOR_US"><a href="Play_for_us.php">Play For Us</a></div>
+          <div id="BECOME_A_MEMBER"><a href="Become_a_member.php">Become a Member</a></div>
+          <div id="BECOME_A_VOLUNTEER"><a href="Become_a_volunteer.php">Become a Volunteer</a></div>
+      </div>         
+    </header> 
 </div>  
 
- <img src="pictures/untitled-1 2.jpg" alt="" width="500" height="237" class="image2" />
+ <img src="../pictures/untitled-1 2.jpg" alt="" width="500" height="237" class="image2" />
 <body1 id="body1_aboutus_page">
-<img src="pictures/old-music.jpg" alt="" width="500" height="237" class="image4"/>
+<img src="../pictures/old-music.jpg" alt="" width="500" height="237" class="image4"/>
+<h3> Kappa </h3>
 <h2 class="body_content2"> The Townsville Community Music Centre celebrated its 30th year in 2013. </h2>
 <p class="body_content3"> It has been constantly changing over the years to keep up to date with the musical tastes and needs of the Townsville community. As part of the relocation of the Music Centre to the Civic Theatre, Bronia Renison and Jean Dartnall, both librarians, have assessed the old collection of sheet music, books and recorded music which the centre has been storing, unused, for many years. Sometimes older things have to be discarded to make way for the new, but the Music Centre is aware that older material may still have value. <br>
 <br>
@@ -44,18 +44,70 @@ The National Library of Australia has an online catalogue (TROVE) that lists not
 Also discovered in the old collection were some pieces relevant to North Queensland. Local musicians performed these at a musical social afternoon on Sunday April 21st in C2 at the Civic Theatre. The remaining sheet music, books and CDs were put on display and distributed free of charge to the local music community. </p>
 </body1>
 
-<div class="image5"><img src="pictures/timelineredone.png" alt="" width="64" height="64" class="image5"/> </div>
+<div id="timeline">
+<ul>
+<div id ="left">
+<li><h3>1983</h3>
+<p>
+The Townsville Community Music Centre was established at a public meeting on May 24th. Then Deputy Mayor, Ken McElligott, opened the meeting and presented a cheque for $50 from the City Cotuxil to cover initial petty cash, the Centre's first fiinds. At the meeting an executive committee was formed. Over the next few weeks that committee drafted a constitution which was endorsed at another public meeting on June 15th. Fred Thompson was Chairman from September 1983, with Gordon Dean as his Deputy and Jan Eagleton as Secret.</p></li>
+</div>
+
+<div id ="right">
+<li><h3>1985</h3>
+<p>
+Kirsty Veron was appointed as the first Director. Kirsty was very interested in teaching music to children and had worked with Mira in the 1983 classes. She held this position until 1988 leading the new organisation into a strong position in the Townsville arts community. </p></li>
+</div>
+
+<div id ="left">
+<li><h3>1987</h3>
+<p>
+This was the year of the first fund raising dinner. These dinners became a tradition as they were a wonderful mixture of good food, good wine and good music. The first ones were held at the home of Paul and June Tonnoir in North Ward. Later they moved to the Bishop's Lodge as guests of the Anglican Bishop. Attendees would often book their tickets for the next year's dinner as soon as they had attended this one. They ran until 2004.</p></li>
+</div>
+
+<div id ="right">
+<li><h3>1988</h3>
+<p>
+Mary Lou Schoenfeldt was appointed as Administrator. Although this was initially a small part time job with limited responsibilities, Mary Lou made the job, the Centre and indeed music in Townsville, her own. She was a wonderful asset to the Centre and to the cultural life of the City until she had to retire due to ill health in 2003.</p></li>
+</div>
+
+<div id ="left">
+<li><h3>1990</h3>
+<p>
+This year the first lunchtime concert was held at the PercTucker The importance of providing performance opportunities for emerging musicians had become evident and from this time, for a number of years, one of the major activities of the Centre was the production and management of concerts. </p></li>
+</div>
+
+<div id ="right">
+<li><h3>1999</h3>
+<p>
+Arts Queensland had been a major funder of Music Centre activities for a number of years but in this year they agree to provide funding on a three year basis. This made it much easier for the Centre to plan ahead and reduced the time that had to be spent on repetitive grant applications. This arrangement ran until 2004.</p></li>
+</div>
+
+<div id ="left">
+<li><h3>2003</h3>
+<p>
+A spectacular variety concert was held at the Townsville Civic Theatre to celebrate twenty years of the Music Centre and as a tribute to May Lou.</p></li>
+</div>
+
+<div id ="right">
+<li><h3>2005</h3>
+<p>
+The Centre moved to offices in the Old Magistrate's Court.</p></li>
+</div>
+</ul>
+</div>
+
+<div class="image"><img src="../pictures/timelineredoneline.png" alt=""/> </div>
 
 <footer id="footer2">
-<div id="contact_about"><strong><h2 class="footer2_contact">Contact</h2></strong>  Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810 
+<div id="contact_about"><strong><h2 class="footer2_contact">Contact</h2></strong>Open 9:30-2:30 Monday - Wednesday<br>  Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810 
 <div id="fblogo_about"> <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="pictures/fblogo.jpg" width="64" height="64" alt=""/></a></div>
 
-<div id="links1_about"><a href="index.html">Home</a><br> <a href="Events.html" class="nav-link">Events</a><br><a href="Artists.html" class="nav-link">Artists</a><br>
-  <a href="About.html" class="nav-link">About</a></div> 
-<div id="links2_about"><a href="Play_for_us.html"> Play For Us</a><br>
-  <a href="Buy_Tickets.html">Buy Tickets</a><br>
-  <a href="Become_a_volunteer.html">Become a Volunteer</a><br>
-  <a href="Become_a_member.html">Become a Member</a></div>
+<div id="links1_about"><a href="index.php">Home</a><br> <a href="Events.php">Events</a><br><a href="Artists.php">Artists</a><br>
+  <a href="about.php">About</a></div> 
+<div id="links2_about"><a href="Play_for_us.php"> Play For Us</a><br>
+  <a href="Buy_Tickets.php">Buy Tickets</a><br>
+  <a href="Become_a_volunteer.php">Become a Volunteer</a><br>
+  <a href="Become_a_member.php">Become a Member</a></div>
 </div>
 <div id="sponsors_about"> <strong><h2> Sponsors</h2> </strong> 
 <div id="sponsor1_about"> <a href="http://www.townsville.qld.gov.au/Pages/default.aspx"><img src="pictures/1152800_1_M.png" width="60" height="86" alt=""/></a> </div>
