small change to report.

--- a/Report for TCMC - Group 16.html
+++ b/Report for TCMC - Group 16.html
@@ -29,7 +29,7 @@
     <p>brief details of who did what</p>
     <ul>
       <li><strong>Robert Marsh (robomartion): </strong> All of the php coding, home page comp in photoshop, member signup form, started feeder page, some of timeline</li>
-      <li><strong>Jaison Thyil Thomas: </strong> Did not contribute </li>
+      <li><strong>Jaison Thomas Thyil: </strong> Did not contribute </li>
       <li><strong>Joshua Page (jpage46): </strong> Target audience, site flowchart, top half of about page, buy tickets form </li>
       <li><strong>Hendrik Nel (Comedy112): </strong> Mission statement, content section of project plan. All of the css on every page, all html and css for home page and header and footer, artist + events html/css.</li>
       <li><strong>Bradley Boye (bboye9): </strong> Second half of feeder page, css for timeline. Success evaluation </li>
