--- a/Report for TCMC - Group 16.html
+++ b/Report for TCMC - Group 16.html
@@ -12,7 +12,7 @@
 <body>    
     <h1>CP1406/CP2010 - 2015 - TCMC Report</h1>
     <h2>Group 16</h2>
-    <p><strong>Members:</strong> Joshua Page, Hendrik Nel, Bradley Boye, Jaison Thyil Thomas, Robert Marsh </p>
+    <p><strong>Members:</strong> Joshua Page, Hendrik Nel, Bradley Boye, Jaison Thomas Thyil, Robert Marsh </p>
     <a href="http://ditwebtsv.jcu.edu.au/~tcmc16/">Site Home Page</a><br>
     <a href="http://ditwebtsv.jcu.edu.au/~tcmc16/signin.php">Admin Page/Login</a>
     <p><a href="https://github.com/robomartion/CP2010-1406-group-project" target="_blank">CP2010-1406-group-project
